update: edit index, edit karedok, hapus udang.html

--- a/index.html
+++ b/index.html
@@ -163,15 +163,6 @@
                 </div> 
                 <center><p><font size="5"><h1>KAREDOK</h1></p></center></font>
                 <center><p>Karedok adalah salah satu makanan khas Sunda di Indonesia.Karedok <br>sebagai makanan tradisional dibuat dengan bahan-bahan sayuran mentah, seperti:</p></center>
-                    <ul>
-                     <li>Mentimun</li>
-                     <li>Taoge</li>
-                     <li>Kol</li>
-                     <li>Kacang Panjang</li>
-                     <li>Ubi</li>
-                     <li>Daun kemangi</li>
-                     <li>Terong atau leunca</li>
-                    </ul>
                 <center><p>Sedangkan sausnya adalah bumbu kacang yang dibuat dari cabai merah,<br> bawang putih, kencur, kacang tanah, air asam, gula kawung, garam, dan terasi.<br> Salah satu ciri dari karedok adalah menggunakan oncom bakar. Bila tidak<br> menggunakan oncom bakar disebutnya lotek mentah. Selain karedok, masih banyak lagi<br> makanan tradisional Jawa Barat lainnya, seperti seblak, tutug oncom, dan nasi jamblang.</p></center> 
             </div><br><br>
 
@@ -194,15 +185,8 @@
                 <center><img src="rujak cingur.jpg"></center>
                 </div> 
                 <center><p><font size="5"><h1>RUJAK CINGUR</h1></p></center></font>
-                <center><p>Rujak cingur adalah salah satu makanan tradisional Jawa Timur,<br> yang umum ditemukan di sekitaran Surabaya. <br> Rujak cingur biasanya terdiri dari irisan beberapa jenis buah seperti:
-                      <ul>
-                        <li>Timun, Kerahi (krai, yaitu sejenis timun khas Jawa Timur)</li>
-                        <li>Bengkuang</li>
-                        <li>Mangga muda</li>
-                        <li>Nanas</li>
-                        <li>Kedondong</li>
-                    </ul>
-                Kemudian ditambah lontong, tahu, tempe, bendoyo, cingur, serta<br> sayuran seperti kecambah atau taoge, kangkung, dan kacang panjang.</p></center> 
+                <center><p>Rujak cingur adalah salah satu makanan tradisional Jawa Timur,<br> yang umum ditemukan di sekitaran Surabaya. <br> campuran sayuran rebus, buah-buahan segar, tahu, tempe, lontong,<br>dan yang paling khas adalah "cingur" (hidung atau moncong sapi yang sudah direbus dan diolah),
+                disiram dengan bumbu kacang dan petis udang.<br></p></center> 
             </div><br><br>
 
     <section class="MAKANAN KHAS MALUKU">
@@ -232,32 +216,46 @@
             <div class="manda">
                 <h2 id="PAPUA TIMUR"><center>MAKANAN KHAS DAERAH PAPUA TIMUR</center></h2><br>
                 <div class="IMG">
-                <center><img src="udang selingkuh.jpg"></center>
+                <center><img src="udang.jpg"></center>
                 </div> 
                 <center><p><font size="5"><h1>UDANG SELINGKUH</h1></p></center></font>
                 <center><p>Makanan tradisional khas Papua Timur yang satu ini memiliki nama unik berupa udang selingkuh. Dinamakan udang selingkuh karena udang yang diolah memiliki bentuk tubuh seperti udang pada umumnya. Namun, bagian capitnya mirip seperti kepiting. Jenis udang yang digunakan ini merupakan udang perairan air tawar. Biasanya, dipanen dari sungai. Udang ini dapat disajikan dengan berbagai cara. Mulai dari diolah dengan saus padang, saus tiram, atau saus asam-manis khas restoran seafood.</p></center> 
             </div><br><br>
 
-        <footer>
-            <div class = "footer-container">
-                <div class = "footer-left">
-                    <h2>TECHNEWS</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur molestias aut blanditiis totam quia enim, autem tenetur cum facere, fugit beatae at voluptas ipsum perferendis!</p>
-                </div>
+<!-- Updated Footer Only -->
+<footer>
+    <div class="footer-container" style="display:flex; justify-content:space-between; padding:40px; background:#222; color:#fff; flex-wrap:wrap;">
+        <div class="footer-section" style="flex:1; min-width:250px; margin-bottom:20px;">
+            <h2 style="margin-bottom:15px;">Makanan Khas Indonesia</h2>
+            <p>Menjelajahi keberagaman kuliner Nusantara dari Sabang sampai Merauke. Cicipi lezatnya makanan tradisional Indonesia yang kaya rempah dan budaya.</p>
+        </div>
 
-                <div class = "footer-right">
-                    <h2>Newletter</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, autem!</p>
+        <div class="footer-section" style="flex:1; min-width:250px; margin-bottom:20px;">
+            <h2 style="margin-bottom:15px;">Navigasi</h2>
+            <ul style="list-style:none; padding:0; line-height:1.8;">
+                <li><a href="#ACEH" style="color:#fff; text-decoration:none;">Aceh</a></li>
+                <li><a href="#SUMATERA BARAT" style="color:#fff; text-decoration:none;">Sumatera Barat</a></li>
+                <li><a href="#BALI" style="color:#fff; text-decoration:none;">Bali</a></li>
+                <li><a href="#JOGJA" style="color:#fff; text-decoration:none;">Jogja</a></li>
+                <li><a href="#PALEMBANG" style="color:#fff; text-decoration:none;">Palembang</a></li>
+            </ul>
+        </div>
 
-                    <div>
-                        <input type = "text" placeholder = "Email Address">
-                        <i class = "fas fa-envelope"></i>
-                    </div>
-                </div>
+        <div class="footer-section" style="flex:1; min-width:250px; margin-bottom:20px;">
+            <h2 style="margin-bottom:15px;">Ikuti Kami</h2>
+            <p>Terhubung dengan kami melalui sosial media.</p>
+            <div style="display:flex; gap:15px; margin-top:10px;">
+                <i class="fab fa-facebook" style="font-size:22px;"></i>
+                <i class="fab fa-instagram" style="font-size:22px;"></i>
+                <i class="fab fa-youtube" style="font-size:22px;"></i>
             </div>
+        </div>
+    </div>
 
-            <p>Copyright &copy; 2025 All rights reserved</p>
-        </footer>
+    <div style="text-align:center; padding:15px; background:#111; color:#ccc;">
+        <p>© 2025 Makanan Khas Daerah Indonesia | Semua Hak Dilindungi</p>
+    </div>
+</footer>
 
         <script src="manda.js" async defer></script>
     </body>
